--- a/README.Rmd
+++ b/README.Rmd
@@ -126,12 +126,12 @@ API_Server <- paste0("https://montilab.bu.edu/CaDrA_API/download_feature_set")
 
 # Retrieve first two feature sets received from (i)
 # e.g., TCGA_ACC_2016_01_28_GISTIC_MUT_SIG, TCGA_BLCA_2016_01_28_GISTIC_MUT_SIG
-feature_sets <- fs_list$feature_set_name[1:2]
+feature_sets <- fs_list$feature_set_name
 include_input_score <- TRUE
 include_gene_expression <- TRUE
 out_dir <- "~/Github"
 
-# Download feature sets and return a datalist with appropriate paths to its dataset
+# Download feature sets and return a datalist with appropriate paths to dataset
 mydatafile <- CaDrA.shiny::download_feature_sets(
   API_Server = API_Server,
   feature_sets = feature_sets,
