--- a/vignettes/create-cadra-instructions.Rmd
+++ b/vignettes/create-cadra-instructions.Rmd
@@ -13,8 +13,8 @@ knitr::opts_chunk$set(message=FALSE, collapse = TRUE, comment="")
 
 There are two panels on this page:
 
-- Right-side: [User Inputs](#user-inputs)
-- Left-side: [CaDrA Results](#cadra-results)
+- Left-side: [User Inputs](#user-inputs)
+- Right-side: [CaDrA Results](#cadra-results)
 
 ## 1. User Inputs
 
