--- a/README.Rmd
+++ b/README.Rmd
@@ -88,10 +88,14 @@ knitr::kable(head(fs_list))
 #### (ii) Pull down datasets from the portal
 
 ```{r}
+
 datasets <- CaDrA.shiny::pull_datasets(
   feature_set = "TCGA_ACC_2016_01_28_GISTIC_MUT_SIG",
   include_gene_expression = TRUE
 )
+
+datasets
+
 ```
 
 #### (iii) Run GSVA with downloaded datasets
