--- a/README.Rmd
+++ b/README.Rmd
@@ -7,27 +7,24 @@ output: rmarkdown::github_document
 ```{r, include=FALSE, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(fig.path="./man/figures/", message=FALSE, collapse=FALSE, comment="", warning=FALSE)
 
-# Install BiocManager
-if (!require("BiocManager", quietly = TRUE))
-  install.packages("BiocManager")
-
-# The following initializes usage of Bioc devel
-BiocManager::install(version='devel')
-
-# Install CaDrA 
-BiocManager::install("CaDrA")
-
-# Install GSVA 
-BiocManager::install("GSVA")
-
-# Install hypeR
+# # Install BiocManager
+# if (!require("BiocManager", quietly = TRUE))
+#   install.packages("BiocManager")
+# 
+# # The following initializes usage of Bioc devel
+# BiocManager::install(version='devel')
+# 
+# # Install CaDrA 
+# BiocManager::install("CaDrA")
+# 
+# # Install GSVA 
+# BiocManager::install("GSVA")
+# 
+# # Install hypeR
 library(devtools)
 devtools::install_github("montilab/hypeR")
 
-# Install knitr
-install.packages("knitr", repos="http://cran.us.r-project.org")
-
-# Load CaDrA.shiny 
+# Load CaDrA.shiny
 load_all()
 
 # Load R packages
