--- a/README.Rmd
+++ b/README.Rmd
@@ -9,23 +9,30 @@ knitr::opts_chunk$set(fig.path="./man/figures/", message=FALSE, collapse=FALSE, 
 
 # # Install BiocManager
 # if (!require("BiocManager", quietly = TRUE))
-#   install.packages("BiocManager")
+#     install.packages("BiocManager")
 # 
 # # The following initializes usage of Bioc devel
-# BiocManager::install(version='devel')
+# BiocManager::install(version='3.16')
 # 
-# # Install CaDrA 
+# # Install CaDrA
 # BiocManager::install("CaDrA")
 # 
 # # Install GSVA 
 # BiocManager::install("GSVA")
 # 
-# # Install hypeR
-library(devtools)
-devtools::install_github("montilab/hypeR")
+# # # Install hypeR
+# library(devtools)
+# devtools::install_github("montilab/hypeR")
+# 
+# # Load CaDrA.shiny
+# devtools::load_all()
+# 
+# # Install knitr
+# install.packages("knitr", repos="http://cran.us.r-project.org")
 
 # Load CaDrA.shiny
-load_all()
+library(devtools)
+devtools::load_all()
 
 # Load R packages
 library(knitr)
@@ -124,7 +131,7 @@ fs_list <- CaDrA.shiny::get_feature_set(order_by="asc")
 
 ```{r}
 ## Show the description of the first few feature sets
-knitr::kable(head(fs_list))
+knitr::kable(head(fs_list), row.names = FALSE)
 ```
 
 #### (ii) Retrieve datasets from the portal
@@ -241,7 +248,7 @@ mydatafile <- CaDrA.shiny::download_feature_sets(
 
 ```{r}
 # Look at the top 6 rows
-knitr::kable(head(mydatafile))
+knitr::kable(head(mydatafile), row.names = FALSE)
 ```
 
 #### (iii) Launch CaDrA's Shiny app with the downloaded dataset
